fix seed correctly when training transformer. grid search with optimizer and weight initialization, normalize images

--- a/experiments/taming_transformers/data_generation_and_aug.ipynb
+++ b/experiments/taming_transformers/data_generation_and_aug.ipynb
@@ -1,92 +1,15 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 18375,
-     "status": "ok",
-     "timestamp": 1648059122420,
-     "user": {
-      "displayName": "Pedro Bedmar López",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
-      "userId": "16390218131444039330"
-     },
-     "user_tz": -60
-    },
-    "id": "kcre8naKTT9-",
-    "outputId": "0f5b85e9-3718-4e21-faec-0a2b522a5564",
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mounted at /content/drive\n"
-     ]
-    }
-   ],
-   "source": [
-    "from google.colab import drive\n",
-    "drive.mount(\"/content/drive\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Google Colab"
+    "### Cambiamos el directorio de trabajo (en el servidor ngpu.ugr.es)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 413,
-     "status": "ok",
-     "timestamp": 1648059139765,
-     "user": {
-      "displayName": "Pedro Bedmar López",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
-      "userId": "16390218131444039330"
-     },
-     "user_tz": -60
-    },
-    "id": "EhjJ7xBswAxw",
-    "outputId": "fc266750-6bd2-4f59-c159-1a3aa447161a"
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/content/drive/MyDrive/4_ING_INFORMATICA/tfg/tfg/experiments/taming_transformers/taming-transformers\n"
-     ]
-    }
-   ],
-   "source": [
-    "%cd /content/drive/MyDrive/4_ING_INFORMATICA/tfg/tfg/experiments/taming_transformers/taming-transformers"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "NGPU server"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -103,55 +26,46 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "id": "YQ9Kd8wP0BOY"
-   },
    "source": [
-    "### Preprocesando imágenes de moléculas organometálicas y los contraejemplos de la Universidad de Neguev (articles_molecules)"
-   ]
+    "## Normalización de imágenes"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Funciones de normalización de imágenes, separación entre train y test para taming-transformer"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 696,
-     "status": "ok",
-     "timestamp": 1648059166389,
-     "user": {
-      "displayName": "Pedro Bedmar López",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
-      "userId": "16390218131444039330"
-     },
-     "user_tz": -60
-    },
-    "id": "M9ms9mNVz9bZ"
-   },
+   "execution_count": 24,
    "outputs": [],
    "source": [
-    "import os\n",
-    "import glob\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from PIL import Image, ImageOps"
-   ]
+    "from PIL import Image, ImageOps\n",
+    "import glob"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 4,
-     "status": "ok",
-     "timestamp": 1648059166390,
-     "user": {
-      "displayName": "Pedro Bedmar López",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
-      "userId": "16390218131444039330"
-     },
-     "user_tz": -60
-    },
-    "id": "Hw9kMNrkzYju"
-   },
+   "execution_count": 25,
    "outputs": [],
    "source": [
     "def resize_with_padding(img, required_size):\n",
@@ -161,42 +75,24 @@
     "    pad_w = delta_w // 2\n",
     "    pad_h = delta_h // 2\n",
     "    padding = (pad_w, pad_h, delta_w - pad_w, delta_h - pad_h)\n",
-    "    return ImageOps.expand(img, padding, fill=(255,255,255))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "source": [
+    "    return ImageOps.expand(img, padding, fill=(255,255,255))\n",
+    "\n",
     "def apply_resize(images_path, preprocess_folder=\"preprocess\", required_size=192):\n",
     "    preprocess_folder = preprocess_folder + \"/\"\n",
     "    filenames = glob.glob(images_path+\"*.png\")\n",
     "    os.makedirs(images_path+preprocess_folder, exist_ok=True)\n",
     "\n",
     "    for filename in filenames:\n",
-    "      img = Image.open(filename)\n",
-    "      width, height = img.size\n",
-    "      img = resize_with_padding(img, required_size)\n",
+    "        img = Image.open(filename)\n",
+    "        width, height = img.size\n",
+    "        img = resize_with_padding(img, required_size)\n",
     "\n",
-    "      img.convert(\"RGB\").save(images_path+preprocess_folder+filename.split(\"/\")[-1].replace(\"png\",\"jpg\"))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "execution_count": 42,
-   "outputs": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "outputs": [],
-   "source": [
-    "def gen_metadata(directory):\n",
+    "        img.convert(\"RGB\").save(images_path+preprocess_folder+filename.split(\"/\")[-1].replace(\"png\",\"jpg\"))\n",
+    "\n",
+    "def gen_metadata(directory, seed=1):\n",
     "    directory = directory+\"/\"\n",
     "    filenames = glob.glob(directory+\"*.jpg\")\n",
-    "    train, test = train_test_split(filenames, test_size=0.25, random_state=42)\n",
+    "    train, test = train_test_split(filenames, test_size=0.25, random_state=seed)\n",
     "\n",
     "    with open(directory+\"xx_train.txt\", \"w\") as f:\n",
     "        for filename in train[:-1]:\n",
@@ -217,50 +113,12 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "192x192 molecules"
-   ],
    "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 64852,
-     "status": "ok",
-     "timestamp": 1648059284711,
-     "user": {
-      "displayName": "Pedro Bedmar López",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
-      "userId": "16390218131444039330"
-     },
-     "user_tz": -60
-    },
-    "id": "G24wfgiw1Qnh"
+    "id": "YQ9Kd8wP0BOY"
    },
-   "outputs": [],
    "source": [
-    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
-    "apply_resize(images_path)"
+    "### Preprocesando imágenes de moléculas organometálicas y los contraejemplos de la Universidad de Neguev (articles_molecules)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "outputs": [],
-   "source": [
-    "preprop_images_path = images_path+\"preprocess/\"\n",
-    "gen_metadata(preprop_images_path)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
   },
   {
    "cell_type": "markdown",
@@ -268,15 +126,12 @@
     "256x256 molecules"
    ],
    "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {
     "executionInfo": {
      "elapsed": 7,
@@ -299,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 27,
    "metadata": {
     "executionInfo": {
      "elapsed": 813,
@@ -331,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/not_molecules/\"\n",
@@ -346,49 +201,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 29,
    "outputs": [],
    "source": [
     "preprop_images_path = images_path+\"preprocess256/\"\n",
-    "gen_metadata(preprop_images_path)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "384x384 moleculas"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "outputs": [],
-   "source": [
-    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
-    "apply_resize(images_path, \"preprocess384/\", 384)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "outputs": [],
-   "source": [
-    "preprop_images_path = images_path+\"preprocess384/\"\n",
     "gen_metadata(preprop_images_path)"
    ],
    "metadata": {
@@ -404,31 +220,43 @@
     "id": "gsfwptG30dDO"
    },
    "source": [
-    "### Aumentando dataset"
+    "## Aumentando conjunto de imágenes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 1301,
-     "status": "ok",
-     "timestamp": 1648059286818,
-     "user": {
-      "displayName": "Pedro Bedmar López",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
-      "userId": "16390218131444039330"
-     },
-     "user_tz": -60
-    },
-    "id": "Gkpo0nyJ0sx1"
-   },
+   "execution_count": 30,
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import imgaug as ia\n",
     "from imgaug import augmenters as iaa\n",
-    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "import cv2"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### Tres conjuntos de transformaciones de imágenes que vamos a aplicar"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "source": [
     "augmentation_seq = iaa.Sequential([\n",
     "                      iaa.Sometimes(0.5, iaa.GaussianBlur(sigma=(0, 0.5))),\n",
     "                      iaa.Affine(\n",
@@ -456,23 +284,39 @@
     "], random_order=True)\n",
     "\n",
     "augmentation_seq_3 = iaa.Sequential([\n",
-    "                      iaa.Sometimes(0.5, iaa.GaussianBlur(sigma=(0, 0.5))),\n",
-    "                      iaa.LinearContrast((0.7, 1.75)),\n",
+    "                      iaa.Sometimes(0.7, iaa.GaussianBlur(sigma=(0, 0.6))),\n",
+    "                      iaa.LinearContrast((0.75, 2)),\n",
     "                      iaa.Affine(\n",
     "                          scale={\"x\": (0.7, 1.0), \"y\": (0.7, 1.0)},\n",
     "                          rotate=(-45, 45),\n",
     "                          shear=(-10,10),\n",
-    "                          translate_percent={\"x\": (-0.1, 0.1), \"y\": (-0.1, 0.1)},\n",
+    "                          translate_percent={\"x\": (-0.2, 0.2), \"y\": (-0.1, 0.1)},\n",
     "                          cval=255\n",
     "                      ),\n",
-    "                      iaa.Sometimes(0.7, iaa.AdditiveGaussianNoise(loc=0, scale=(0.0, 0.025*255))),\n",
-    "                      iaa.Fliplr(0.3)\n",
+    "                      iaa.Multiply((0.6, 1.4), per_channel=0.25),\n",
+    "                      iaa.AdditiveGaussianNoise(loc=0, scale=(0.0, 0.05*255), per_channel=0.3),\n",
+    "                      iaa.Fliplr(0.2),\n",
+    "                      iaa.Flipud(0.2),\n",
+    "                      iaa.Sometimes(0.7, iaa.ElasticTransformation(alpha=(0.75,3), sigma=(0.2, 0.5))),\n",
+    "                      iaa.OneOf([\n",
+    "                          iaa.Sharpen(alpha=(0,1), lightness=(0.5, 1.5)),\n",
+    "                          iaa.Emboss(alpha=(0,1), strength=(0.75, 2))\n",
+    "                      ]),\n",
+    "                      iaa.Dropout((0.01,0.15), per_channel=0.5)\n",
     "], random_order=True)"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   },
+   "execution_count": 31,
+   "outputs": []
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 32,
    "metadata": {
     "executionInfo": {
      "elapsed": 217909,
@@ -489,13 +333,8 @@
    },
    "outputs": [],
    "source": [
-    "import os\n",
-    "import glob\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import cv2\n",
-    "\n",
-    "def aug(directory, directory_aug, aug_seq, repeat=2):\n",
-    "  ia.seed(1)\n",
+    "def aug(directory, directory_aug, aug_seq, repeat=2, seed=1):\n",
+    "  ia.seed(seed)\n",
     "  directory = directory + \"/\"\n",
     "  filenames = glob.glob(directory+\"*.jpg\")\n",
     "\n",
@@ -515,76 +354,6 @@
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "192x192 images"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "outputs": [],
-   "source": [
-    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
-    "preprop_images_path = images_path+\"preprocess/\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {
-    "executionInfo": {
-     "elapsed": 6,
-     "status": "ok",
-     "timestamp": 1648059505528,
-     "user": {
-      "displayName": "Pedro Bedmar López",
-      "photoUrl": "https://lh3.googleusercontent.com/a-/AOh14GgDTwUVI1l0xxb1JsPU-jpXD7nANK221nZ_Rfet=s64",
-      "userId": "16390218131444039330"
-     },
-     "user_tz": -60
-    },
-    "id": "VIQ6RUKp-7XB"
-   },
-   "outputs": [],
-   "source": [
-    "aug(preprop_images_path, \"aug\", augmentation_seq, repeat=2)\n",
-    "gen_metadata(preprop_images_path+\"aug\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
-    "gen_metadata(preprop_images_path+\"aug2\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "aug(preprop_images_path, \"aug3\", augmentation_seq_3, repeat=3)\n",
-    "gen_metadata(preprop_images_path+\"aug3\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "metadata": {
     "pycharm": {
      "name": "#%% md\n"
@@ -596,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
@@ -611,7 +380,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
+   "outputs": [],
+   "source": [
+    "aug(preprop_images_path, \"aug\", augmentation_seq, repeat=3)\n",
+    "gen_metadata(preprop_images_path+\"aug\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
@@ -625,36 +409,12 @@
    }
   },
   {
-   "cell_type": "markdown",
-   "source": [
-    "384x384 images"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
-  },
-  {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 36,
    "outputs": [],
    "source": [
-    "images_path = \"../../../datasets/negev/articles_molecules/\"\n",
-    "preprop_images_path = images_path+\"preprocess384/\""
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "outputs": [],
-   "source": [
-    "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=3)\n",
-    "gen_metadata(preprop_images_path+\"aug2\")"
+    "aug(preprop_images_path, \"aug3\", augmentation_seq_3, repeat=3)\n",
+    "gen_metadata(preprop_images_path+\"aug3\")"
    ],
    "metadata": {
     "collapsed": false,
@@ -674,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "outputs": [],
    "source": [
     "images_path = \"../../../datasets/negev/not_molecules/\"\n",
@@ -689,11 +449,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
+   "outputs": [],
+   "source": [
+    "aug(preprop_images_path, \"aug\", augmentation_seq, repeat=2)\n",
+    "gen_metadata(preprop_images_path+\"aug\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
    "outputs": [],
    "source": [
     "aug(preprop_images_path, \"aug2\", augmentation_seq_2, repeat=2)\n",
     "gen_metadata(preprop_images_path + \"aug2\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "outputs": [],
+   "source": [
+    "aug(preprop_images_path, \"aug3\", augmentation_seq_3, repeat=2)\n",
+    "gen_metadata(preprop_images_path+\"aug3\")"
    ],
    "metadata": {
     "collapsed": false,
